--- a/src/package.json
+++ b/src/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "fs": "*",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.6.6"
+    "mongodb": "^3.6.6",
+    "redis": "^3.1.2"
   }
 }
