--- a/src/package.json
+++ b/src/package.json
@@ -27,6 +27,7 @@
     "fs": "*",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.6",
-    "redis": "^3.1.2"
+    "redis": "^3.1.2",
+    "uuid": "^8.3.2"
   }
 }
