--- a/.github/workflows.yaml
+++ b/.github/workflows.yaml
@@ -1,27 +1,27 @@
 
 # build.yml
 on:
-  pull_request:
-    paths:
-    - "**/*.yml"
-    - "**/*.html"
-  push:
-    paths:
-    - "**/*.yml"
-    - "**/*.html"
-    branches:         # array of glob patterns matching against refs/heads. Optional; defaults to all
-    - master          # triggers on pushes that contain changes in master
+  ##pull_request:
+    ##paths:
+    ##- "**/*.yml"
+    ##- "**/*.html"
+  push
+    #paths:
+    #- "**/*.yml"
+    #- "**/*.html"
+    #branches:         # array of glob patterns matching against refs/heads. Optional; defaults to all
+    #- master          # triggers on pushes that contain changes in master
 
 name: Build and Push an Image to ECR
 
 # https://docs.aws.amazon.com/cli/latest/userguide/cli-configure-envvars.html
 env:
-  AWS_DEFAULT_REGION: us-west-1
-  AWS_DEFAULT_OUTPUT: json
+  AWS_DEFAULT_REGION: us-east-2
+  AWS_DEFAULT_OUTPUT: yaml
   AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  CONTAINER_IMAGE: guestbook:${{ github.sha }}
+  CONTAINER_IMAGE: af-auth-app:${{ github.sha }}
 
 jobs:
   build-and-push:
@@ -42,14 +42,23 @@ jobs:
       run: |
         # Build and tag the image
         docker build \
-          -t $CONTAINER_IMAGE \
-          -t $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$CONTAINER_IMAGE ./php-redis
- 
+          -t $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$CONTAINER_IMAGE ./src
+    # Push to AWS
+    - name: Push
+      run: |
+        # Push image to AWS ECR
+        docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$CONTAINER_IMAGE
     # Set image tag in kustomization
-
+    - name: pull from af-flux
+      uses: actions/checkout@v2
+      with:
+        repository: michaelfortunato/af-flux-repo
+        token: ${{secrets.RW_ACCOUNT_WIDE_TOKEN}}
+        ref: main
+        path: "af-flux-repo"
     - name: Set image tag
       run: |
-          cd deploy
+          cd af-flux-repo/apps/auth-app
           kustomize edit set image $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$CONTAINER_IMAGE
           cat kustomization.yaml
     - name: Commit kustomization
@@ -60,15 +69,6 @@ jobs:
     - name: Push changes to master
       uses: ad-m/github-push-action@master
       with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: master
-          force: true       
-    
-    # Add additional steps here like scanning of image
-
-    # Only push to registry on master
-    - name: Push
-      if: github.ref == 'refs/heads/master'
-      run: |
-        # Push image to AWS ECR
-        docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$CONTAINER_IMAGE
+          github_token: ${{ secrets.RW_ACCOUNT_WIDE_TOKEN}}
+          branch: main
+          force: true 
