--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -37,7 +37,7 @@ jobs:
     - name: Setup ECR
       run: |
         # Login to AWS ECR
-        $( aws ecr get-login --no-include-email )
+        $(aws ecr get-login-password --region us-east-2)
     - name: Build and tag the image
       run: |
         # Build and tag the image
