--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -13,7 +13,6 @@ on:
     #- master          # triggers on pushes that contain changes in master
 
 name: Build and Push an Image to ECR
-
 # https://docs.aws.amazon.com/cli/latest/userguide/cli-configure-envvars.html
 env:
   AWS_DEFAULT_REGION: us-east-2
@@ -22,7 +21,6 @@ env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   CONTAINER_IMAGE: af-auth-app:${{ github.sha }}
-
 jobs:
   build-and-push:
     name: Build and deploy
@@ -37,7 +35,7 @@ jobs:
     - name: Setup ECR
       run: |
         # Login to AWS ECR
-        $(aws ecr get-login-password --region us-east-2)
+        aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin ${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.us-east-2.amazonaws.com
     - name: Build and tag the image
       run: |
         # Build and tag the image
