--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -58,9 +58,10 @@ jobs:
       run : |
         echo $(${{github.workspace}})
         cd ${{env.github.workspace}}
+        ls
     - name: Set image tag
       run: |
-          cd af-flux-repo/apps/auth-app
+          cd ./af-flux-repo/apps/auth-app
           kustomize edit set image $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$CONTAINER_IMAGE
           cat kustomization.yaml
     - name: Commit kustomization
