--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -63,7 +63,8 @@ jobs:
       run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git commit -a -m "$CONTAINER_IMAGE"
+          git add .
+          git commit -m "$CONTAINER_IMAGE"
     - name: Push changes to master
       uses: ad-m/github-push-action@master
       with:
