--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -59,6 +59,10 @@ jobs:
           cd ./af-flux-repo/apps/base/auth-app
           kustomize edit set image $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$CONTAINER_IMAGE
           cat kustomization.yaml
+    - name: tes
+      run : |
+        cd ../
+        git status
     - name: Commit kustomization
       run: |
           git config --local user.email "action@github.com"
