--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -4,9 +4,10 @@ env:
   node: true
 extends:
   - airbnb-base
-parser: '@typescript-eslint/parser'
+  - prettier
+parser: "@typescript-eslint/parser"
 parserOptions:
-  ecmaVersion: 13
+  ecmaVersion: 2021
 plugins:
-  - '@typescript-eslint'
+  - "@typescript-eslint"
 rules: {}
