--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "rm -rf ./dist && tsc",
-    "dev": "NODE_ENV=development ts-node-dev --respawn --require dotenv/config src/index.js dotenv_config_path=/home/mfortunato/AF/.env",
-    "test": "export NODE_ENV=development && npm run build && node --require dotenv/config ./dist/index.js dotenv_config_path=/home/mfortunato/AF/.env ",
+    "dev": "NODE_ENV=development ts-node-dev --respawn --require dotenv/config src/index.js dotenv_config_path=/home/mfortunato/AF/virtual-dev-fs/.env",
+    "test": "export NODE_ENV=development && npm run build && node --require dotenv/config ./dist/index.js dotenv_config_path=/home/mfortunato/AF/virtual-dev-fs/.env",
     "start": "npm run build && node ./dist/index.js"
   },
   "repository": {
@@ -21,6 +21,10 @@
   "homepage": "https://github.com/michaelfortunato/AR-Auth-Service#readme",
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.5",
+    "@types/node": "^16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
     "dotenv": "^10.0.0",
