--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mongodb": "^3.6.6",
     "redis": "^3.1.2",
     "typescript": "^4.4.4",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yaml": "^1.10.2"
   }
 }
