--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -30,7 +30,7 @@ jobs:
     outputs:
       CONTAINER_IMAGE: ${{ steps.output_step.outputs.CONTAINER_IMAGE }}
       BRANCH_NAME: ${{ steps.output_step.outputs.BRANCH_NAME }}
-    if: ${{ (github.ref == 'ref/heads/main') || ( github.ref == 'refs/heads/dev') }}
+    #if: ${{ (github.ref == 'ref/heads/main') || ( github.ref == 'refs/heads/dev') }}
     steps:
       - name: Checkout
         uses: actions/checkout@master
