--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "rm -rf ./dist && tsc",
-    "dev": "NODE_ENV=development ts-node-dev --respawn --require dotenv/config src/index.js dotenv_config_path=/home/mfortunato/AF/virtual-dev-fs/.env",
-    "test": "export NODE_ENV=development && npm run build && node --require dotenv/config ./dist/index.js dotenv_config_path=/home/mfortunato/AF/virtual-dev-fs/.env",
+    "dev": "./dev/dev.sh",
+    "intercept": "./dev/intercept.sh",
     "start": "npm run build && node ./dist/index.js"
   },
   "repository": {
